# projektStudia

./: CMakeLists.txt  commonFunctions.cpp  commonFunctions.h  contributors.cpp  contributors.h  czlonkowie.cpp  czlonkowie.h  interface.cpp  interface.h  main.cpp  projects.cpp  projects.h  projekty.cpp  projekty.h  structures.cpp  structures.h  tasks.cpp  tasks.h  wspolneFunkcje.cpp  wspolneFunkcje.h  zadania.cpp  zadania.h
informacje/: zadania.txt
